--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb://localhost:27017/angularfullstack
-MONGODB_TEST_URI=mongodb://localhost:27017/test
-SECRET_TOKEN=catswillruletheworld
+MONGODB_URI=mongodb://localhost:27017/fullstack-boilerplate
+MONGODB_TEST_URI=mongodb://localhost:27017/fullstack-boilerplate-test
+SECRET_TOKEN=fullstack-boilerplate
