--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^7.0.2",
+    "@angular/animations": "^7.2.4",
+    "@angular/cdk": "^7.3.2",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
     "@angular/core": "~7.2.0",
@@ -37,6 +37,9 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@auth0/angular-jwt": "^2.1.0",
+    "@nebular/auth": "^3.2.1",
+    "@nebular/security": "^3.2.1",
+    "@nebular/theme": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.2.1",
@@ -49,6 +52,7 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.3",
     "morgan": "^1.9.1",
+    "nebular-icons": "^1.1.0",
     "ngx-bootstrap": "^3.1.1",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
@@ -62,6 +66,7 @@
     "@angular/cli": "~7.2.1",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@schematics/angular": "~7.2.0",
     "@types/chai-http": "^3.0.5",
     "@types/express": "^4.16.0",
     "@types/jasmine": "~2.8.14",
